--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,5 +4,5 @@ services:
     ports:
       - "80:80"  
     volumes:
-      - .:/usr/share/nginx/html
+      - ./webapp:/usr/share/nginx/html
     restart: unless-stopped  
